--- a/src/styles.css
+++ b/src/styles.css
@@ -840,3 +840,12 @@ p-inputnumber,
   border-color: #f59e1c;
   background: #f59e1c;
 }
+
+.p-sidebar {
+  background: #f59e0b;
+  color: #ffffff;
+}
+
+.p-sidebar .p-sidebar-header .p-sidebar-close, .p-sidebar .p-sidebar-header .p-sidebar-icon {
+  color: #ffffff !important;
+}
