--- a/src/app/core/layout/alterar-senha/alterar-senha.component.html
+++ b/src/app/core/layout/alterar-senha/alterar-senha.component.html
@@ -40,7 +40,7 @@
           <div class="grid  justify-content-center mt-2">
             <div class="col-12 md:col-6 lg:col-3">
               <button pButton pRipple type="submit" label="Confirmar" icon="fas fa-save"
-              [disabled]="f.invalid || salvando" class="p-button-raised p-button-primary w-full"></button>
+              [disabled]="f.invalid || salvando" class="p-button-raised p-button-warning w-full"></button>
             </div>
           </div>
           <div *ngIf="salvando" class="grid justify-content-center mt-4">
